logs/validate.20260324-194646.log
error[E0310]: the parameter type `T` may not live long enough
  --> src/Concurrency.rs:46:13
   |
46 |     impl<T> StTInMtT for T where T: StT + Send + Sync {}
   |             ^^^^^^^^
   |             |
   |             the parameter type `T` must be valid for the static lifetime...
   |             ...so that the type `T` will meet its required lifetime bounds...
   |
note: ...that is required by this bound
  --> src/Concurrency.rs:28:45
   |
28 |     pub trait StTInMtT: StT + Send + Sync + 'static {}
   |                                             ^^^^^^^
help: consider adding an explicit lifetime bound
   |
46 |     impl<T> StTInMtT for T where T: StT + Send + Sync + 'static {}
   |                                                       +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
Elapsed: 14s
